--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,33 +19,6 @@
 
     <%- include('header.ejs') %>
 
-    <!-- <form action="/signup_process" method = 'post'>
-
-        <h1>Create Your Account</h1>
-
-        <label for="">First Name:</label>
-        <input type="text" name="fName" id="" required>
-
-        <label for="">Last Name:</label>
-        <input type="text" name="lName" id="" required>
-
-        <label for="">Email:</label>
-        <input type="email" name="email" id="" required>
-
-        <label for="">Username:</label>
-        <input type="text" name="uName" id="" required>
-
-        <label for="">Password:</label>
-        <input type="password" name="password" id="" required>
-
-        <br>
-        <button type="submit">Register</button>
-
-    </form>
-    
-    <br>
-    <a href="/login"><button type="button">Login</button></a> -->
-
     <section class="p-3 p-md-4 p-xl-5" style="background-color: #f0f0f0;">
         <div class="container">
           <div class="card-signup border-light-subtle shadow-sm">
@@ -70,16 +43,21 @@
                     </div>
                   </div>
 
+                  <br>
+                  <div class="alert alert-danger" role="alert">
+                    This is a danger alert—check it out!
+                  </div>
+
                   <!-- FORM START -->
-                  <form action="/signup_process" method = 'post'>
+                  <form action="/signup_process" method = 'post' onsubmit="validateInput()">
                     <div class="row gy-3 gy-md-4 overflow-hidden">
                       <div class="col-12">
                         <label for="firstName" class="form-label">First Name <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" name="fName" id="firstName" placeholder="First Name" required>
+                        <input type="text" class="form-control" name="fName" id="firstName" placeholder="First Name" maxlength="30" required>
                       </div>
                       <div class="col-12">
                         <label for="lastName" class="form-label">Last Name <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" name="lName" id="lastName" placeholder="Last Name" required>
+                        <input type="text" class="form-control" name="lName" id="lastName" placeholder="Last Name" maxlength="30" required>
                       </div>
                       <div class="col-12">
                         <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
@@ -87,11 +65,12 @@
                       </div>
                       <div class="col-12">
                         <label for="username" class="form-label">Username <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" name="uName" id="username" placeholder="Username" required>
+                        <input type="text" class="form-control" name="uName" id="username" placeholder="Username" maxlength="15" required>
                       </div>
                       <div class="col-12">
                         <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}" required title="Must contain at least one number, one uppercase and lowercase letter, and at least 7 or more characters">
+                        <!-- Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters -->
                       </div>
                       <div class="col-12">
                         <div class="form-check">
@@ -152,5 +131,14 @@
     
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+      function validateInput(){
+        let fName = document.getElementById("firstName").value;
+        let lName = document.getElementById("lastName").value;
+        let uName = document.getElementById("username").value;
+        let pass = document.getElementById("password").value;
+        let message;
+      }
+    </script>
 </body>
 </html>
