--- a/views/header.ejs
+++ b/views/header.ejs
@@ -74,6 +74,7 @@
                           role="button"
                           data-bs-toggle="dropdown"
                           aria-expanded="false"
+                          style = "color: #F5F5DC !important"
                       >
                           <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -155,6 +156,7 @@
                           role="button"
                           data-bs-toggle="dropdown"
                           aria-expanded="false"
+                          style = "color: #F5F5DC !important"
                       >
                           <svg
                           xmlns="http://www.w3.org/2000/svg"
