--- a/views/feature.ejs
+++ b/views/feature.ejs
@@ -9,6 +9,7 @@
     <!-- STYLE LINKS -->
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/testimonials/testimonial-3/assets/css/testimonial-3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -23,8 +24,8 @@
     <section class="container-fluid my-5 text-center">
         <div class="row">
         <div class="col-12">
-            <h1 class="display-4" style="font-family: 'Playfair Display', serif; font-weight: 900;">Feature Page</h1>
-            <p class="lead" style="font-family: 'Playfair Display', serif; font-weight: 300; color: #752329;">Explore more about us and more of what we offer</p>
+            <h1 class="display-4" style="font-family: 'Playfair Display', serif; font-weight: 900; color:#752329">Feature Page</h1>
+            <p class="lead" style="font-family: 'Playfair Display', serif; font-weight: 400;">Explore more about us and more of what we offer</p>
         </div>
         </div>
     </section>
@@ -42,19 +43,19 @@
             </div>
             <div class="col-md-4 d-flex align-items-center">
                 <div>
-                <h2>Welcome to Caution</h2>
-                <p style="font-family: Arial, Helvetica, sans-serif">Here's an in-depth walkthrough of our featured products and services, showcasing the best that Caution Coffee and Supply™ has to offer.</p>
+                <h2 style = " font-weight: 900; color: #752329">Welcome to Caution</h2>
+                <p style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Here's an in-depth walkthrough of our featured products and services, showcasing the best that Caution Coffee and Supply™ has to offer.</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- What We Offer -->
-    <section class="pt-5 pb-5" style="padding: 10px;">
+    <section class="pt-5 pb-5" style="padding: 10px; background-color: #E8E8E1">
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h3 class="display-6" style="font-family: 'Playfair Display', serif; font-weight: 700; text-align: center; padding: 10px; ">What We Offer</h3>
+              <h3 class="display-6" style="color:#752329;  font-family: 'Playfair Display', serif; font-weight: 900; text-align: center; padding: 10px; ">What We Offer</h3>
             </div>
             <div class="col-12">
               <div class="row">
@@ -63,7 +64,7 @@
                     <img class="card-img-top" src="./media/CARD1.JPG" alt="Premium Coffee Beans and Supplies">
                     <div class="card-body">
                       <h4 class="card-title" style="padding: 10px;">Premium Coffee Beans and Supplies</h4>
-                      <p class="card-text"  style="font-family: Arial, Helvetica, sans-serif">Our high-quality beans ensure a rich, flavorful coffee experience. We also offer premium coffee supplies for both personal and professional use.</p>
+                      <p class="card-text"  style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Our high-quality beans ensure a rich, flavorful coffee experience. We also offer premium coffee supplies for both personal and professional use.</p>
                     </div>
                   </div>
                 </div>
@@ -72,7 +73,7 @@
                     <img class="card-img-top" src="./media/CARD2.JPG" alt="Expert Baristas">
                     <div class="card-body">
                       <h4 class="card-title" style="padding: 10px;">Expert Baristas</h4>
-                      <p class="card-text"   style="font-family: Arial, Helvetica, sans-serif">Our skilled baristas are trained to craft the perfect cup of coffee, providing personalized recommendations and expertly preparing a range of specialty brews.</p>
+                      <p class="card-text"   style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Our skilled baristas are trained to craft the perfect cup of coffee, providing personalized recommendations and expertly preparing a range of specialty brews.</p>
                     </div>
                   </div>
                 </div>
@@ -81,7 +82,7 @@
                     <img class="card-img-top" src="./media/CARD3.JPG" alt="Cozy Atmosphere with Restroom and Air Conditioning">
                     <div class="card-body">
                       <h4 class="card-title" style="padding: 10px;">Cozy Atmosphere with Restroom and Air Conditioning</h4>
-                      <p class="card-text"  style="font-family: Arial, Helvetica, sans-serif">Relax in our cozy café with comfortable seating, air conditioning, and a clean, accessible restroom.</p>
+                      <p class="card-text"  style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Relax in our cozy café with comfortable seating, air conditioning, and a clean, accessible restroom.</p>
                     </div>
                   </div>
                 </div>
@@ -90,7 +91,7 @@
                     <img class="card-img-top" src="./media/CARD4.JPG" alt="Artisan Pastries">
                     <div class="card-body">
                       <h4 class="card-title">Artisan Pastries</h4>
-                      <p class="card-text"  style="font-family: Arial, Helvetica, sans-serif">Delight in a selection of freshly baked pastries perfect for pairing with your coffee or enjoying on their own.</p>
+                      <p class="card-text"  style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Delight in a selection of freshly baked pastries perfect for pairing with your coffee or enjoying on their own.</p>
                     </div>
                   </div>
                 </div>
@@ -99,7 +100,7 @@
                     <img class="card-img-top" src="./media/CARD5.jpg" alt="Pet-Friendly">
                     <div class="card-body">
                       <h4 class="card-title">Pet-Friendly</h4>
-                      <p class="card-text"  style="font-family: Arial, Helvetica, sans-serif">Bring your furry friends along! Sit back and enjoy your coffee while your companion relaxes by your side.</p>
+                      <p class="card-text"  style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Bring your furry friends along! Sit back and enjoy your coffee while your companion relaxes by your side.</p>
                     </div>
                   </div>
                 </div>
@@ -108,7 +109,7 @@
                     <img class="card-img-top" src="./media/CARD6.JPG" alt="Eco-Friendly Practices">
                     <div class="card-body">
                       <h4 class="card-title">Eco-Friendly Practices</h4>
-                      <p class="card-text" style="font-family: sans-serif;">We are committed to sustainability aiming to reduce our environmental footprint.</p>
+                      <p class="card-text"style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">We are committed to sustainability aiming to reduce our environmental footprint.</p>
                     </div>
                   </div>
                 </div>
@@ -122,7 +123,7 @@
     <div style="background-color: #f0f0f0;">
         <section class = "container">
           <br>
-          <h3 class="display-6" style="font-family: 'Playfair Display', serif; font-weight: 700; text-align: center; padding: 10px; ">Snippets of how we make our drinks</h3>
+          <h3 class="display-6" style="font-family: 'Playfair Display', serif; color:#752329; font-weight:900; text-align: center; padding: 10px; ">Snippets of how we make our drinks</h3>
           <div class="row">
             <div class="col col-6">
               <div class="embed-responsive embed-responsive-16by9" style="padding-bottom:178%; position:relative; display:block; width:100%">
@@ -144,14 +145,15 @@
         </section>
     </div>
 
-     <!-- Infographics Section -->
-    <section class="container-fluid my-5" style="background-color: #f0f0f0; padding: 50px 20px;">
-        <div class="container">
-        <h3 class="display-6" style="font-family: 'Playfair Display', serif; font-weight: 700; text-align: left; padding-bottom: 20px; ">How We Started</h3>
-        <div class="infographic d-flex justify-content-center">
-            <img style="display: block; width: 150%; max-width: 1050px;" src="./media/CAUTION-INFOG.png" alt="Caution Infographic">
-        </div>
-        </div>
+    <!-- Infographics Section -->
+    <section class="container-fluid my-5" style="background-color: #E8E8E1;  padding: 50px 20px;">
+      <div class="container">
+        
+      <h3 class="display-6" style="font-family: 'Playfair Display', serif; font-weight: 700; text-align: center; font-weight: 900; color:#752329; padding-bottom: 20px; ">How We Started</h3>
+      <div class="infographic d-flex justify-content-center">
+          <img style="display: block; width: 150%; max-width: 1050px;" src="./media/CAUTION-INFOG.png" alt="Caution Infographic">
+      </div>
+      </div>
     </section>
 
     <!-- LOCATION START -->
@@ -159,7 +161,7 @@
         <br>
         <div class="container">
         <div class="row featurette">
-            <h2 style="text-align: center; color: #F5F5DC;">VISIT US!</h2>
+            <h2 style="text-align: center; font-weight:900; color: #F5F5DC;">VISIT US!</h2>
             <hr class="featurette-divider" style="border: none; border-top: 1px solid #F5F5DC;">
             <div class="col-md-6" style="text-align: center;">
             <br>
