--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <!-- STYLE LINKS -->
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/testimonials/testimonial-3/assets/css/testimonial-3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -35,7 +36,7 @@
             <img src="./media/caution-hero1.png" class="d-block w-100" alt="HERO 1">
             <div class="carousel-caption d-none d-md-block" style="background-color: rgba(15, 15, 15, 0.6);">
             <h3 class="text-white">FEATURE</h3>
-            <p class="text-white">We didn't start out as simply another coffee shop—in fact, we were their suppliers! Learn more about our very own story.</p>
+            <p class="text-white" style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">We didn't start out as simply another coffee shop—in fact, we were their suppliers! <br> Learn more about our very own story.</p>
             <p><a class="btn text-white" style="background-color: #752329;" href="#">Learn more!</a></p>
             </div>
         </div>
@@ -43,7 +44,7 @@
             <img src="./media/espresso-hero.png" class="d-block w-100" alt="HERO 2">
             <div class="carousel-caption d-none d-md-block" style="background-color: rgba(15, 15, 15, 0.6);">
             <h3 class="text-white">COFFEE AND BREW GEAR</h3>
-            <p class="text-white">Are you looking for a supplier for your coffee shop? We've got you covered!</p>
+            <p class="text-white" style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Are you looking for a supplier for your coffee shop? We've got you covered!</p>
             <p><a class="btn text-white" style="background-color: #752329;" href="/gear">Check Now!</a></p>
             </div>
         </div>
@@ -51,7 +52,7 @@
             <img src="./media/caution-hero3.png" class="d-block w-100" alt="HERO 3">
             <div class="carousel-caption d-none d-md-block" style="background-color: rgba(15, 15, 15, 0.6);">
             <h3 class="text-white">VISIT US!</h3>
-            <p class="text-white">Celebrate National Teacher's Month with us! Teachers enjoy a 10% discount!</p>
+            <p class="text-white" style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;">Celebrate National Teacher's Month with us! Teachers enjoy a 10% discount!</p>
             <p><a class="btn text-white" style="background-color: #752329;" href="#location">Visit Us!</a></p>
             </div>
         </div>
@@ -68,10 +69,10 @@
     <!-- CAROUSEL END -->
 
     <!-- BEST SELLERS START -->
-    <section class="best-sellers">
+    <section class="best-sellers" style = "background-color: #E8E8E1;">
         <div class="container">
           <br>
-          <h2 class="text-center">OUR BEST SELLERS</h2>
+          <h2 class="text-center" style = " font-weight: 900; color: #752329">OUR BEST SELLERS</h2>
           <div class="row row-cols-1 row-cols-md-3 g-4 p-4 justify-content-center">
             <div class="col">
               <div class="card h-100">
@@ -102,103 +103,32 @@
             </div>
           </div>
           <div class="text-center">
-            <a href="/menu" class="btn btn-dark">MENU</a>
+            <a href="/menu" class="btn btn-dark" style = "background-color: #752329;">MENU</a>
           </div>
         </div>
+      <br>
     </section>
     <!-- BEST SELLERS END -->
-
-    <!-- DIVIDER -->
-    <div class="container my-5">
-        <hr class="my-4">
-    </div>
-    <!-- DIVIDER -->
 
     <!-- CUSTOMER REVIEW START -->
     <section class="bg-light py-5 py-xl-8"> 
         <div class="container-fluid"> 
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
-            <h2 class="fs-6 text-uppercase text-center" style="color: #752329;">Customer Review</h2>
+              <h2 class="fs-4 text-uppercase text-center" style="color: #752329; font-weight: 900;">Customer Review</h2>
             <p class="display-5 mb-4 mb-md-5 text-center" style="font-size: 2.25rem;">We deliver what we promise. See what our Customers express about us.<p>
             <hr class="w-50 mx-auto mb-5 mb-xl-9" style="border: none; border-top: 1px solid #752329;">
             </div>
         </div>
         </div><div class="container-fluid overflow-hidden"> 
         <div class="row gy-4 gy-md-0 gx-xxl-5">
-
-             <!-- REVIEW CARDS -->
-            <!-- <div class="col-12 col-md-4">
-            <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329;">
-                <div class="card-body p-4 p-xxl-5">
-                <figure>
-                    <figcaption>
-                    <div class="coffee-ratings mb-3" style="color: #752329;">
-                        <i class="fas fa-coffee"></i>
-                        <i class="fas fa-coffee"></i>
-                    </div>
-                    <blockquote class="bsb-blockquote-icon mb-4">
-                        <h5 class="card-title">A Latte Room for Improvement</h5>
-                        <p class="card-text">The coffee is okay but could use a little more refinement.</p>
-                    </blockquote>
-                    <h4 class="mb-2">Luna Lovegood</h4>
-                    </figcaption>
-                </figure>
-                </div>
-            </div>
-            </div>
-        
-            <div class="col-12 col-md-4">
-            <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329;">
-                <div class="card-body p-4 p-xxl-5">
-                <figure>
-                    <figcaption>
-                    <div class="coffee-ratings mb-3" style="color: #752329;">
-                        <i class="fas fa-coffee"></i>
-                        <i class="fas fa-coffee"></i>
-                        <i class="fas fa-coffee"></i>
-                    </div>
-                    <blockquote class="bsb-blockquote-icon mb-4">
-                        <h5 class="card-title">Just Brew-tiful</h5>
-                        <p class="card-text">A satisfying cup of coffee that leaves you content.</p>
-                    </blockquote>
-                    <h4 class="mb-2">Cedric Digory</h4>
-                    </figcaption>
-                </figure>
-                </div>
-            </div>
-            </div>
-        
-            <div class="col-12 col-md-4">
-            <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329;">
-                <div class="card-body p-4 p-xxl-5">
-                <figure>
-                    <figcaption>
-                    <div class="coffee-ratings mb-3" style="color: #752329;">
-                        <i class="fas fa-coffee"></i>
-                        <i class="fas fa-coffee"></i>
-                        <i class="fas fa-coffee"></i>
-                        <i class="fas fa-coffee"></i>
-                    </div>
-                    <blockquote class="bsb-blockquote-icon mb-4">
-                        <h5 class="card-title">Brew-tifully Good</h5>
-                        <p class="card-text">A very good coffee experience with great flavors!</p>
-                    </blockquote>
-                    <h4 class="mb-2">Albus Dumbledore</h4>
-                    </figcaption>
-                </figure>
-                </div>
-            </div>
-            </div> -->
-            <!-- REVIEW CARDS -->
-
             <% if (reviews && reviews.length >= 1) { %> <!-- CHECK IF MAY LAMAN BA YUNG REVIEWS DATABASE -->
                 <% reviews.forEach(reviews => { %>
 
                     <!-- REVIEW CARDS -->
                     <div class="col-12 col-md-4">
-                        <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329;">
-                            <div class="card-body p-4 p-xxl-5">
+                        <div class="card border-0 border-bottom shadow-sm rounded-card" style="border-color: #752329; background-color: #E8E8E1;">
+                            <div class="card-body p-4 p-xxl-5" style="background-color: #e8e8e1;">
                             <figure>
                                 <figcaption>
                                 <div class="coffee-ratings mb-3" style="color: #752329;">
@@ -209,7 +139,7 @@
                                 </div>
                                 <blockquote class="bsb-blockquote-icon mb-4">
                                     <h5 class="card-title">A Latte Room for Improvement</h5>
-                                    <p class="card-text"><%= reviews.message %></p>
+                                    <p class="card-text" style="font-family: 'Poppins', sans-serif; font-weight: 400; font-style: normal;"><%= reviews.message %></p>
                                 </blockquote>
                                 <h4 class="mb-2"><%= reviews.username %></h4>
                                 <p class="card-text"><%= reviews.dateCreated %></p>
@@ -219,7 +149,6 @@
                         </div>
                     </div>
                      <!-- REVIEW CARDS -->
-
                 <% }) %>
             <% } %>
                     
