--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,20 +19,6 @@
 
     <%- include('header.ejs') %>
 
-    <!-- <form action="/login" method = 'post'>
-
-        <label for="">Email:</label>
-        <input type="email" name="email" id="" required>
-
-        <label for="">Password:</label>
-        <input type="password" name="password" id="" required>
-
-        <button type="submit">Log In</button>
-
-    </form> -->
-
-    <!-- <a href="/signup"><button type="button">Register</button></a> -->
-
     <section class="vh-100" style="background-color: #f0f0f0; background-size: cover; background-position: center;">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -50,7 +36,7 @@
                         <form action="/login" method = 'post'>
       
                             <div class="d-flex align-items-center mb-3 pb-1">
-                            <span class="h1 fw-bold mb-0">Welcome to Caution Coffee!</span>
+                            <h2 style="color: #752329; font-weight: 900;">Welcome to Caution Coffee!</h2>
                             </div>
         
                             <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
@@ -58,23 +44,23 @@
                             <!-- Email input field -->
                             <div class="form-outline mb-4">
                             <label class="form-label" for="form2Example17">Email Address</label>
-                            <input type="email" id="form2Example17" class="form-control form-control-lg" name="email" required/>
+                            <input type="email" id="form2Example17" class="form-control form-control-lg" name="email" style = "border-color: #752329;" required/>
                             </div>
                             
                             <!-- Password input field -->
                             <div class="form-outline mb-4">
                             <label class="form-label" for="form2Example27">Password</label>
-                            <input type="password" id="form2Example27" class="form-control form-control-lg" name="password" required/>
+                            <input type="password" id="form2Example27" class="form-control form-control-lg" name="password" style = "border-color: #752329;" required/>
                             </div>
                             
                             <!-- Submit button -->
                             <div class="pt-1 mb-4">
-                            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                              <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" style="background-color: #752329;">Login</button>
                             </div>
                             
-                            <a class="small text-muted" href="#!">Forgot password?</a>
-                            <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/signup"
-                                style="color: #393f81;">Register here</a></p>
+                            <a class="small text-muted text-decoration-none" href="#!" style="color: #752329 !important; ">Forgot password?</a>
+                            <p class="mb-5 pb-lg-2" style="color: black;" >Don't have an account? <a class = "text-decoration-none" href="/signup"
+                                style = "color:#752329; ">Register here</a></p>
                             <a href="#!" class="small text-muted">Terms of Use</a>
                             <a href="#!" class="small text-muted ms-2">Privacy Policy</a>
                       </form>
