--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -37,7 +37,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="mb-5">
-                        <h2 class="h3">Registration</h2>
+                        <h2 style = "font-weight: 900; color:#752329">Registration</h2>
                         <h3 class="fs-6 fw-normal text-secondary m-0">Enter your details to register</h3>
                       </div>
                     </div>
@@ -53,36 +53,36 @@
                     <div class="row gy-3 gy-md-4 overflow-hidden">
                       <div class="col-12">
                         <label for="firstName" class="form-label">First Name <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" name="fName" id="firstName" placeholder="First Name" maxlength="30" required>
+                        <input type="text" class="form-control" name="fName" id="firstName" placeholder="First Name" maxlength="30" required style = "border-color: #752329;">
                       </div>
                       <div class="col-12">
                         <label for="lastName" class="form-label">Last Name <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" name="lName" id="lastName" placeholder="Last Name" maxlength="30" required>
+                        <input type="text" class="form-control" name="lName" id="lastName" placeholder="Last Name" maxlength="30" required style = "border-color: #752329;">
                       </div>
                       <div class="col-12">
                         <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
-                        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required style = "border-color: #752329;">
                       </div>
                       <div class="col-12">
                         <label for="username" class="form-label">Username <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" name="uName" id="username" placeholder="Username" maxlength="15" required>
+                        <input type="text" class="form-control" name="uName" id="username" placeholder="Username" maxlength="15" required style = "border-color: #752329;">
                       </div>
                       <div class="col-12">
                         <label for="password" class="form-label">Password <span class="text-danger">*</span></label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}" required title="Must contain at least one number, one uppercase and lowercase letter, and at least 7 or more characters">
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}" required title="Must contain at least one number, one uppercase and lowercase letter, and at least 7 or more characters" style = "border-color: #752329;">
                         <!-- Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters -->
                       </div>
-                      <div class="col-12">
+                      <!-- <div class="col-12">
                         <div class="form-check">
                           <input class="form-check-input" type="checkbox" value="" name="iAgree" id="iAgree" required>
                           <label class="form-check-label text-secondary" for="iAgree">
                             I agree to the <a href="#!" class="link-primary text-decoration-none">terms and conditions</a>
                           </label>
                         </div>
-                      </div>
+                      </div> -->
                       <div class="col-12">
-                        <div class="d-grid">
-                          <button class="btn bsb-btn-xl btn-primary" style="background-color: #292323; border-color: #292323;" type="submit">Sign up</button>
+                        <div class="">
+                          <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" style="background-color: #752329;">Sign up</button>
                         </div>
                       </div>
                     </div>
@@ -92,10 +92,10 @@
                   <div class="row">
                     <div class="col-12">
                       <hr class="mt-5 mb-4 border-secondary-subtle">
-                      <p class="m-0 text-secondary text-center">Already have an account? <a href="/login" class="link-primary text-decoration-none">Sign in</a></p>
+                      <p class="m-0 text-secondary text-center">Already have an account? <a href="/login" class="link-primary text-decoration-none" style = "color: #752329 !important;">Sign in</a></p>
                     </div>
                   </div>
-                  <div class="row">
+                  <!-- <div class="row">
                     <div class="col-12">
                       <p class="mt-5 mb-4">Or sign in with</p>
                       <div class="d-flex gap-3 flex-column flex-xl-row">
@@ -119,7 +119,7 @@
                         </a>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
