--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -21,8 +21,9 @@
 
     <section class="menu">
 
-        <div style="display: inline-block;">
+        <div style="display: inline-block; padding: 20px;">
             <form action="/menu" method="get" id="formsort">
+                <br>
                 <label for="filter">Sort By:</label>
                 <select id="filter" name="filter">
                     <option value="">Default</option>
